[gd_scene load_steps=8 format=3 uid="uid://nuhx5ertrji"]

[ext_resource type="Script" uid="uid://bgs74pj8mtem8" path="res://script/interact/box.gd" id="1_uymod"]
[ext_resource type="Texture2D" uid="uid://2rpesr7nrrbn" path="res://sprites/hold/crate.png" id="2_cusfa"]
[ext_resource type="Script" uid="uid://cmu0yfdxpx0sl" path="res://script/interact/area_2d.gd" id="3_8hx78"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0e3c1"]
size = Vector2(14, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7cfpg"]
size = Vector2(8, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8hx78"]
size = Vector2(8, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_16a8o"]
size = Vector2(14, 8)

[node name="Box" type="Node2D"]
script = ExtResource("1_uymod")

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_cusfa")

[node name="BoxCollisionArea" type="Area2D" parent="."]
collision_layer = 4

[node name="Collision" type="CollisionShape2D" parent="BoxCollisionArea"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_0e3c1")

[node name="Left" type="Area2D" parent="."]
script = ExtResource("3_8hx78")
direction = "left"

[node name="BoxCollision" type="CollisionShape2D" parent="Left"]
position = Vector2(-11, 4)
shape = SubResource("RectangleShape2D_7cfpg")

[node name="Right" type="Area2D" parent="."]
script = ExtResource("3_8hx78")
direction = "right"

[node name="BoxCollision" type="CollisionShape2D" parent="Right"]
position = Vector2(11, 4)
shape = SubResource("RectangleShape2D_8hx78")

[node name="Up" type="Area2D" parent="."]
script = ExtResource("3_8hx78")
direction = "up"

[node name="BoxCollision" type="CollisionShape2D" parent="Up"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_16a8o")

[node name="Down" type="Area2D" parent="."]
script = ExtResource("3_8hx78")
direction = "down"

[node name="BoxCollision" type="CollisionShape2D" parent="Down"]
position = Vector2(0, 15)
shape = SubResource("RectangleShape2D_16a8o")

[connection signal="area_shape_entered" from="Left" to="." method="left_area_shape_entered"]
[connection signal="area_shape_exited" from="Left" to="." method="area_shape_exited"]
[connection signal="area_entered" from="Right" to="Right" method="_on_area_entered"]
[connection signal="area_exited" from="Right" to="Right" method="_on_area_exited"]
[connection signal="area_shape_entered" from="Right" to="." method="right_area_shape_entered"]
[connection signal="area_shape_exited" from="Right" to="." method="area_shape_exited"]
[connection signal="area_shape_entered" from="Up" to="." method="up_area_shape_entered"]
[connection signal="area_shape_exited" from="Up" to="." method="area_shape_exited"]
[connection signal="area_shape_entered" from="Down" to="." method="down_area_shape_entered"]
[connection signal="area_shape_exited" from="Down" to="." method="area_shape_exited"]
